fix chapter menu overflow

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -712,6 +712,14 @@ p
   #subheader
     .icon
       margin: 0
+    .menu
+      .right
+        .dropdown
+          .menu
+            max-width: 15rem
+            .item
+              overflow: hidden
+              text-overflow: ellipsis
   #wrapper
     padding: 1rem
   #content
